bin_PROGRAMS = sarcastic
sarcastic_SOURCES = ../fastKdTree/AABB.cpp banner.cpp buildRays.cpp ../fastKdTree/buildTree.cpp ../fastKdTree/clipToAABB.cpp ../colladaToPlyFile/colladainterface.cpp ../fastKdTree/kdTreeNode.cpp ../fastKdTree/rayTrace.cpp reflect.cpp ../fastKdTree/splitCandidate.cpp ../Common/tinyxml/tinystr.cpp ../Common/tinyxml/tinyxml.cpp ../Common/tinyxml/tinyxmlerror.cpp ../Common/tinyxml/tinyxmlparser.cpp ../Common/TriangleMesh.cpp getUserInput.cpp shadowRays.cpp accelerateTriangles.cpp cpuPOField.cpp buildRopesAndBoxes.cpp sarcastic2.cpp tryReadFile.cpp threadCore.cpp ../Common/readMaterialFile.cpp ../Common/boxMullerRandom.c ../Common/printProgress.c ecef2SceneCoords.c ../Common/matrixMultiplication.c ../Common/ranf.c RCS.c TxPowerPerRay.c ../Common/pmath_rng.c

sarcastic_CPPFLAGS = -I.. -I../Common -I../fastKdTree -I../colladaToPlyFile 
sarcastic_CXXFLAGS = -std=gnu++11

sarcastic_LDADD = ../sarclib/libsarclib.a
