noinst_LIBRARIES = libsarclib.a

if HAVE_GDAL
libsarclib_a_SOURCES = alloc.c dataio.c dataio_au4.c dataio_c8.c dataio_ce.c dataio_cphd.c dataio_cphd3.c dataio_cphdx.c dataio_envi.c dataio_gdal.c dataio_gdal_stubs.c dataio_hdf4.c dataio_im.c dataio_input.c dataio_sicd.c dataio_sio.c dataio_srf.c enum2string.c fft_c8.c GeoVector.c image.c image_average.c image_conversion.c image_extract.c image_fft.c image_fftw.c image_interp.c image_math.c image_matrix.c image_pad.c image_random.c image_recip.c image_stats.c image_transpose.c image_unwrap.c interpolate.c kaiser.c latlon.c timer.c vector.c collectionGeometry.c printCPHDCollectionInfo.c dataio_gdal.c
else
libsarclib_a_SOURCES = alloc.c dataio.c dataio_au4.c dataio_c8.c dataio_ce.c dataio_cphd.c dataio_cphd3.c dataio_cphdx.c dataio_envi.c dataio_gdal.c dataio_gdal_stubs.c dataio_hdf4.c dataio_im.c dataio_input.c dataio_sicd.c dataio_sio.c dataio_srf.c enum2string.c fft_c8.c GeoVector.c image.c image_average.c image_conversion.c image_extract.c image_fft.c image_fftw.c image_interp.c image_math.c image_matrix.c image_pad.c image_random.c image_recip.c image_stats.c image_transpose.c image_unwrap.c interpolate.c kaiser.c latlon.c timer.c vector.c collectionGeometry.c printCPHDCollectionInfo.c dataio_gdal_stubs.c
endif
